--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,9 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
+    implementation 'com.android.support:mediarouter-v7:26.1.0'
+
+    compile 'com.squareup.okhttp3:okhttp:3.10.0'
+
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
