--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     implementation 'com.android.support:mediarouter-v7:26.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    implementation 'com.squareup.picasso:picasso:2.3.2'
+
 }
