--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,15 @@
         <activity
             android:name=".View.Activities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".View.Activities.DetailActivity"/>
+
 
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDN-j0Xys4VYBa_N-h4Wmx91F1LHEOU2ac"/>
 
