--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
 
-    implementation 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
 }
